# extra_credit_2

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
include/: BrightnessAndContrast.h  Convolution.h  DrawingModule.h  GammaCorrection.h  Image.h  ImageExceptions.h  ImageProcessing.h  Point.h  Rectangle.h  Size.h
src/: BrightnessAndContrast.cpp  Convolution.cpp  DrawingModule.cpp  GammaCorrection.cpp  Image.cpp  Point.cpp  Rectangle.cpp  Size.cpp
tests/include/: BrightnessAndContrastTests.h  ConvolutionTest.h  GammaCorrectionTests.h  ImageTests.h  RectangleTests.h
tests/resources/: apollonian_gasket.ascii.pgm
tests/src/: BrightnessAndContrastTests.cpp  ConvolutionTest.cpp  GammaCorrectionTests.cpp  ImageTests.cpp  RectangleTests.cpp
